--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: OCA Foundation Painting Log
 description: >- # this means to ignore newlines until "baseurl:"
   Archive of my OCA Foundation painting coursework
 baseurl: "/oca-foundation-painting-log" # the subpath of your site, e.g. /blog
-url: "https://profgaelle.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://ellea-vallee.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 theme: minima
